--- a/styles/main.css
+++ b/styles/main.css
@@ -2,12 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
 
-*{
-    box-sizing: border-box;
-    /*box-sizing: content-box;*/
-}
+
+
 body {
 
     color: #ffffffbb;
