--- a/styles/timeline.css
+++ b/styles/timeline.css
@@ -8,15 +8,16 @@
     width: auto;
     display: block;
     overflow-x: scroll;
+    overflow-y: hidden;
     white-space: nowrap;
-    background-color: white;
+    background: none;
     color: black;
-    /* min-height: 100px; */
+    min-height: 70px;
 }
 
 .timeline .day {
     display: inline-flex;
-    margin: 0.5rem;
+    margin: 0 0.5rem;
     border-radius: 10px;
     /* background-color: grey; */
     width: 50px;
